--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-     
-
+    <div class="container"> </div>
+    <div class="center-button">
+       
+      <button class="clearBtn btn "><i class="fa fa-trash"></i>Clear Page</button>
+  </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
