--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="container"> </div>
     <div class="center-button">
        
-      <button class="clearBtn btn "><i class="fa fa-trash"></i>Clear Page</button>
+      <button class="clearBtn btn"><i class="fa fa-trash"></i>Clear Planner</button>
+     
+
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
