adds new html save all and refresh page buttons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="center-button">
        
       <button class="clearBtn btn"><i class="fa fa-trash"></i>Clear Planner</button>
-     
+      <button class="refreshBtn btn"><i class="fas fa-sync"></i> Refresh Page</button>
+      <button class="saveAllBtn btn"><i class="fas fa-save"></i> Save All</button>
 
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
